# twentyfourtyeight

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: board.rs  game.rs  main.rs
src/board/: cell.rs  errors.rs
src/game/: errors.rs
