[package]
name = "twentyfourtyeight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bevy = "0.7.0"
console = { version = "0.15.0", features = ["windows-console-colors"] }
crossterm = "0.23.2"
dialoguer = "0.10.1"
owo-colors = { version = "3.4.0", features = ["supports-colors"] }
rand = "0.8.5"
thiserror = "1.0.31"
tui = "0.18.0"